# StringSearch

./: CMakeLists.txt  README.md
src/: base_string_search.cpp  base_string_search.hpp  bm.cpp  bm.hpp  bmh.cpp  bmh.hpp  kmp.cpp  kmp.hpp  naive.cpp  naive.hpp
test/: bm_tests.cpp  bmh_tests.cpp  kmp_tests.cpp  naive_tests.cpp
